# BeautyFinder

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .prettierignore  DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  render.yaml  tsconfig.base.json  turbo.json
backend/: README.md
backend/api-py/: .env.example  Dockerfile  README.md  pyproject.toml
backend/api-py/app/: __init__.py  main.py
backend/api-py/app/api/: __init__.py  deps.py  router.py
backend/api-py/app/api/routes/: admin.py  auth.py  availability.py  bookings.py  businesses.py  customer_insights.py  favorites.py  health.py  messaging.py  notifications.py  payments.py  reviews.py
backend/api-py/app/core/: __init__.py  actors.py  authorization.py  brain.py  config.py  errors.py  input_validation.py  permissions.py  processors.py  reference_ids.py  roles.py  security.py
backend/api-py/app/db/: __init__.py  session.py
backend/api-py/app/domains/: __init__.py  base.py
backend/api-py/app/schemas/: __init__.py  admin.py  auth.py  availability.py  bookings.py  businesses.py  common.py  customer_insights.py  favorites.py  health.py  messaging.py  notifications.py  payments.py  reviews.py
backend/api-py/tests/: __init__.py  test_ad_payments.py  test_auth_api_security.py  test_auth_registration.py  test_booking_payment_logic.py  test_brain.py  test_customer_insights.py  test_customer_insights_endpoints.py  test_health.py  test_repository_query_safety.py  test_reviews_service.py  test_security.py
(+236 files in other folders)
